--- a/3 - HTML e CSS estrutura e tags/portfólio/index.html
+++ b/3 - HTML e CSS estrutura e tags/portfólio/index.html
@@ -15,7 +15,7 @@
         </nav>
     </header>
 
-    <main>
+    <main class="main">
         <section class="esq__content">
             <h1 class="main__title">Eleve seu negócio digital a outro nível <strong class="negrito">com um desenvolvimento de qualidade!</strong></h1>
 
