--- a/3 - HTML e CSS estrutura e tags/portfólio/sobre.html
+++ b/3 - HTML e CSS estrutura e tags/portfólio/sobre.html
@@ -15,7 +15,7 @@
         </nav>
     </header>
 
-    <main>
+    <main class="main">
         <section class="esq__content">
             <h1 class="main__title"> Sobre mim</h1>
             <p class="main__p">Fiz uma mudança de carreira da área de Economia para a área de Tecnologia na qual sempre fui apaixonado. Então busco oportunidade de me desenvolver e aprender ao máximo nessa minha nova caminhada tecnológica. Possuo um aprendizado rápido e uma comunicação eficiente, carrego comigo uma boa capacidade analítica, sempre comento o que pode ser melhorado.</p>
